<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <Button
        android:id="@+id/button_show"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/button_show" />

    <Button
        android:id="@+id/button_move"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_move" />

    <Button
        android:id="@+id/button_client"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"

        android:text="@string/button_client" />

    <Button
        android:id="@+id/button_auto"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_auto" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_test"
        android:name="com.example.mob.fragment.TestFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>