<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AutoActivity"
    android:orientation="vertical">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_table"
        android:name="com.example.mob.fragment.TableFragment"
        android:layout_width="match_parent"
        android:layout_height="344dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_add_auto"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/button_add_auto" />

        <Button
            android:id="@+id/button_report_auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_report_auto" />

        <Button
            android:id="@+id/button_delete_auto"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/button_delete_auto" />
    </LinearLayout>

</LinearLayout>